--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <li><a href="#hero" class="active">Inicio<br></a></li>
           <li><a href="#about">Sobre Mí</a></li>
           <li><a href="#services">Servicios</a></li>
+          <li><a href="#pricing">Precios</a></li>
           <!-- <li><a href="#portfolio">Portfolio</a></li>-->
           <!-- <li><a href="#team">Team</a></li>-->
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -445,7 +446,6 @@
 
 
 
-	<!-- 
     =================================================
 
 
@@ -971,7 +971,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Precios</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+		<p>Elige la solución que mejor se adapte a las necesidades de tu negocio. ¡Contáctame para más detalles!</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -980,46 +980,46 @@
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="pricing-item">
-              <h3>Free Plan</h3>
+              <h3>Plan Básico - Hasta 100 registros</h3>
               <h4><sup>$</sup>0<span> / month</span></h4>
               <ul>
-                <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
+	            <li><i class="bi bi-check"></i> <span>Procesamiento de información a pequeña escala<span></li>
+	            <li><i class="bi bi-check"></i> <span>Automatización de tareas simples<span></li>
+	            <li><i class="bi bi-check"></i> <span>Reportes básicos y eficientes<span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Pharetra massa massa ultricies</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
               </ul>
-              <a href="#" class="buy-btn">Buy Now</a>
+              <a href="#contact" class="buy-btn">Contáctame</a>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="pricing-item featured">
-              <h3>Business Plan</h3>
+              <h3>Plan Intermedio - Hasta 500 registros</h3>
               <h4><sup>$</sup>29<span> / month</span></h4>
               <ul>
-                <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
+	            <li><i class="bi bi-check"></i> <span>Soluciones personalizadas para medianos volúmenes<span></li>
+	            <li><i class="bi bi-check"></i> <span>Automatización avanzada<span></li>
+	            <li><i class="bi bi-check"></i> <span>Reportes detallados con análisis intermedios<span></li>
                 <li><i class="bi bi-check"></i> <span>Pharetra massa massa ultricies</span></li>
                 <li><i class="bi bi-check"></i> <span>Massa ultricies mi quis hendrerit</span></li>
               </ul>
-              <a href="#" class="buy-btn">Buy Now</a>
+              <a href="#contact" class="buy-btn">Contáctame</a>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-item">
-              <h3>Developer Plan</h3>
+              <h3>Plan Avanzado - Ilimitado</h3>
               <h4><sup>$</sup>49<span> / month</span></h4>
               <ul>
-                <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
+	            <li><i class="bi bi-check"></i> <span>Procesamiento de grandes volúmenes de información</span></li>
+	            <li><i class="bi bi-check"></i> <span>Integración de sistemas avanzados</span></li>
+	            <li><i class="bi bi-check"></i> <span>Soporte continuo y análisis complejos</span></li>
                 <li><i class="bi bi-check"></i> <span>Pharetra massa massa ultricies</span></li>
                 <li><i class="bi bi-check"></i> <span>Massa ultricies mi quis hendrerit</span></li>
               </ul>
-              <a href="#" class="buy-btn">Buy Now</a>
+              <a href="#contact" class="buy-btn">Contáctame</a>
             </div>
           </div><!-- End Pricing Item -->
 
